src/objects/Benefit__c.object
<CustomObject>
    <description>Jagan 03/29/2017 - Created this custom object to track Benefits information.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Store the account number for selected account on benefit</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field for Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Benefits</relationshipLabel>
        <relationshipName>Benefits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicable_Birth_Date_in_US_Format__c</fullName>
        <formula>If(NOT(ISNULL(Primary_Policy_Holder_Birth_Date__c)), TEXT(MONTH(Primary_Policy_Holder_Birth_Date__c))+&quot;/&quot; +TEXT(DAY(Primary_Policy_Holder_Birth_Date__c))+&quot;/&quot; +TEXT(YEAR(Primary_Policy_Holder_Birth_Date__c)),
 If(TEXT( Insurance_Holder_s_Relationship__c) = &quot;Self&quot;, TEXT(MONTH(Account__r.PersonBirthdate))+&quot;/&quot; +TEXT(DAY(Account__r.PersonBirthdate))+&quot;/&quot; +TEXT(YEAR(Account__r.PersonBirthdate)), &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicable Birth Date in US Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Auth End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auth_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Auth Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Authorization_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Authorization Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Hierarchy__c</fullName>
        <label>Benefit Hierarchy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Birth_Date__c</fullName>
        <formula>Account__r.PersonContact.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CA_Benefit_Plan_Year_Type__c</fullName>
        <description>Benefit Year or Plan Year</description>
        <inlineHelpText>Benefit Year or Plan Year</inlineHelpText>
        <label>Benefit Plan Year Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Plan Year</fullName>
                </value>
                <value>
                    <fullName>Benefit Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMN_or_Rx_Expiration_Date__c</fullName>
        <formula>Account__r.CMN_or_Rx_Expiration_Date__c</formula>
        <label>CMN or Rx Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claims_Mailing_Address_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Claims mailing address from the payor associated to the Benefit record.</description>
        <label>Claims Mailing Address Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Payor__c</field>
                <operation>equals</operation>
                <valueField>Address__c.Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Payor Address</relationshipLabel>
        <relationshipName>Payor_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claims_Mailing_Address__c</fullName>
        <formula>IF ( !ISBLANK(Claims_Mailing_Address_Name__c), (Claims_Mailing_Address_Name__r.Address_Line_1__c + &apos;, &apos; + 
 Claims_Mailing_Address_Name__r.City__c  + &apos;, &apos; +
 TEXT(Claims_Mailing_Address_Name__r.State__c) + &apos;, &apos; +
 Claims_Mailing_Address_Name__r.Postal_Code__c + &apos;, &apos; +
 TEXT(Claims_Mailing_Address_Name__r.Country__c) ), &apos;&apos; )</formula>
        <label>Claims Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Pay__c</fullName>
        <label>Co-Pay</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Estimate_Received_Date__c</fullName>
        <description>Date when we received the cost estimate back from EGEKO</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Estimate Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cost_Estimate_Sent_Date__c</fullName>
        <description>Date when cost estimate was sent to EGEKO</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cost Estimate Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <label>Coverage</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Customer_Service_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Service Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EGEKO_Confirmation_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EGEKO Confirmation Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EGEKO_IK_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IK Number Sent By EGEKO</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EGEKO_Kopftext__c</fullName>
        <description>Text will be transferred to EGEKO</description>
        <encryptionScheme>None</encryptionScheme>
        <label>EGEKO Kopftext</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EGEKO_Refusal_Text__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Refusal Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EGEKO_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <description>Name of the Employer of the Policy Holder.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the Employer of the Policy Holder.</inlineHelpText>
        <label>Employer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Represents whether the Benefit is still active for the Account Holder.</description>
        <inlineHelpText>Inactivate the Benefit if the Payor or number is changed.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Group_ID__c</fullName>
        <description>Insurance Group ID/Number.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Insurance Group ID/Number.</inlineHelpText>
        <label>Insurance Group ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Health_Plan_Number__c</fullName>
        <description>Optional Health Plan Number/ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Optional Health Plan Number/ID.</inlineHelpText>
        <label>Insurance Health Plan Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Holder_s_Relationship__c</fullName>
        <label>Insurance Holder&apos;s Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurant_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Insurant Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Error_Message__c</fullName>
        <description>This field tracks the error message during the time of BOOMI integration with EGEKO.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>Title of the Policy Holder</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Title of the Policy Holder</inlineHelpText>
        <label>Job Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Member ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Authorization_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Authorization Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account with Payer record type</description>
        <label>Payor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Payor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payors</relationshipLabel>
        <relationshipName>Payors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Policy_Holder_Date_of_Birth__c</fullName>
        <formula>Account__r.PersonContact.Birthdate</formula>
        <label>Policy Holder Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Holder_Name__c</fullName>
        <formula>Account__r.FirstName + &apos; &apos; + Account__r.LastName</formula>
        <label>Policy Holder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <description>Insurance Payer or Issuer ID</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Insurance Payer or Issuer ID</inlineHelpText>
        <label>Policy Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Auth_Spoke_With__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pre-Auth Spoke With</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Policy_Holder_Birth_Date__c</fullName>
        <description>Date of Birth of Person Holding insurance if different from Name on Account.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date of Birth of Person Holding insurance if different from Name on Account.</inlineHelpText>
        <label>Primary Policy Holder Birth Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Policy_Holder_Name__c</fullName>
        <description>Name of the Insurance Policy Holder if different from Name on Account.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the Insurance Policy Holder if different from Name on Account.</inlineHelpText>
        <label>Primary Policy Holder Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Auth_Denied_or_Approved__c</fullName>
        <label>Prior-Auth Denied or Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APPROVED</fullName>
                </value>
                <value>
                    <fullName>DENIED</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Service_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Service Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Receiver_Max_Qty__c</fullName>
        <description>Maximum number of Receivers allowed during the Authorized Period</description>
        <inlineHelpText>Maximum number of Receivers allowed during the Authorized Period</inlineHelpText>
        <label>Receiver Max Qty</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiver_Max__c</fullName>
        <description>Maximum Amount allowed for Receivers during the Authorized Period</description>
        <inlineHelpText>Maximum Amount allowed for Receivers during the Authorized Period</inlineHelpText>
        <label>Receiver Max $</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Review_Reason__c</fullName>
        <description>Field used to track when the EGEKO status is changed</description>
        <label>Review Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approval to Rejection</fullName>
                </value>
                <value>
                    <fullName>Rejection to Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_Date_Written__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rx Date Written</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sensor_Max__c</fullName>
        <description>Maximum Amount allowed for Sensors during the Authorized Period</description>
        <inlineHelpText>Maximum Amount allowed for Sensors during the Authorized Period</inlineHelpText>
        <label>Sensor Max $</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transmitter_Max__c</fullName>
        <description>Maximum Amount allowed for Transmitters during the Authorized Period</description>
        <inlineHelpText>Maximum Amount allowed for Transmitters during the Authorized Period</inlineHelpText>
        <label>Transmitter Max $</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Benefit</label>
    <listViews>
        <fullName>DE_Benefits</fullName>
        <columns>NAME</columns>
        <columns>Member_Id__c</columns>
        <columns>Benefit_Hierarchy__c</columns>
        <columns>Payor__c</columns>
        <columns>Authorization_Number__c</columns>
        <columns>Auth_Start_Date__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Insurant_Status__c</columns>
        <columns>Co_Pay__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Benefit__c.DE_Benefit</value>
        </filters>
        <label>DE Benefits</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>B-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <recordTypes>
        <fullName>CA_Benefit</fullName>
        <active>true</active>
        <description>Benefit for Canada</description>
        <label>CA Benefit</label>
    </recordTypes>
    <recordTypes>
        <fullName>DE_Benefit</fullName>
        <active>true</active>
        <description>Germany Benefits</description>
        <label>DE Benefit</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Auth_End_Date_Greater_Than_Start_Date</fullName>
        <active>false</active>
        <description>Rule to check if the auth end date should be greater than auth start date</description>
        <errorConditionFormula>Auth_Start_Date__c &gt;  Auth_End_Date__c</errorConditionFormula>
        <errorMessage>Auth End Date should be greater than Auth Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CA_Auth_End_Date_Greater_Dan_Start_Date</fullName>
        <active>true</active>
        <description>Rule to check if the auth end date should be greater than auth start date</description>
        <errorConditionFormula>AND( 
   BEGINS(RecordType.DeveloperName, &apos;CA_&apos;), 
NOT(ISBLANK(Auth_Start_Date__c )),
NOT(ISBLANK(Auth_End_Date__c)),
Auth_Start_Date__c &gt;  Auth_End_Date__c
)</errorConditionFormula>
        <errorMessage>Auth End Date should be greater than Auth Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CA_Policy_Holder_Age_Required</fullName>
        <active>true</active>
        <description>Policy Holder Age is required if the relationship with the Policy Holder is not &apos;Self&apos;.</description>
        <errorConditionFormula>AND ( 
NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;Data Integrator&quot;), 
BEGINS(RecordType.DeveloperName, &apos;CA_&apos;), 
NOT(ISPICKVAL( Insurance_Holder_s_Relationship__c, &apos;Self&apos;)),
ISBLANK(  Primary_Policy_Holder_Birth_Date__c ))</errorConditionFormula>
        <errorMessage>Policy Holder Age is also required if the relationship with the Policy Holder is not &apos;Self&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CA_Policy_Holder_Name_Required</fullName>
        <active>true</active>
        <description>Policy Holder Name is required if the relationship with the Policy Holder is not &apos;Self&apos;.</description>
        <errorConditionFormula>AND ( 
NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;Data Integrator&quot;), 
BEGINS(RecordType.DeveloperName, &apos;CA_&apos;), 
NOT(ISPICKVAL( Insurance_Holder_s_Relationship__c, &apos;Self&apos;)),
ISBLANK( Policy_Holder_Name__c ))</errorConditionFormula>
        <errorMessage>Policy Holder Name is required if the relationship with the Policy Holder is not &apos;Self&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CA_Req_Fields_Check_For_Benefit_Create</fullName>
        <active>true</active>
        <description>Check on the required fields for Benefits creation for Canada Benefits.</description>
        <errorConditionFormula>AND (
NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;Data Integrator&quot;),
        BEGINS(RecordType.DeveloperName, &apos;CA_&apos;), 
	OR (
		ISBLANK(Policy_Number__c),
		ISBLANK(Payor__c),
		ISBLANK(TEXT(Benefit_Hierarchy__c))
	)
)</errorConditionFormula>
        <errorMessage>Policy Number, Payor, Benefit Hierarchy information are required to save a Benefit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DE_Auth_End_Date_Greater_Dan_Start_Date</fullName>
        <active>true</active>
        <description>Rule to check if the auth end date should be greater than auth start date</description>
        <errorConditionFormula>AND( 
   BEGINS(RecordType.DeveloperName, &apos;DE_&apos;), 
Auth_Start_Date__c &gt;  Auth_End_Date__c
)</errorConditionFormula>
        <errorMessage>Auth End Date should be greater than Auth Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DE_Member_Id_Should_B_10_Char_In_Length</fullName>
        <active>true</active>
        <description>Member Id tied to Benefit should be 10 characters in length</description>
        <errorConditionFormula>AND(
   BEGINS(RecordType.DeveloperName, &apos;DE_&apos;), 
ISNEW(),
NOT (ISBLANK( Member_Id__c )),
NOT ( LEN(Member_Id__c) = 10 ) 
)</errorConditionFormula>
        <errorMessage>&apos;Member Id&apos; should be 10 characters in Length.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DE_Req_Fields_Check_For_Benefit_Create</fullName>
        <active>true</active>
        <description>Check on the required fields for Benefits creation for Germany Benefits.</description>
        <errorConditionFormula>AND (
NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;Data Integrator&quot;),
        BEGINS(RecordType.DeveloperName, &apos;DE_&apos;), 
	OR (
		ISBLANK(Member_Id__c),
		ISBLANK(Payor__c),
		ISBLANK(TEXT(Benefit_Hierarchy__c))
	)
)</errorConditionFormula>
        <errorMessage>Member Id, Payor, Benefit Hierarchy information are required to save a Benefit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Member_Id_Should_Be_10_Chars_In_Length</fullName>
        <active>false</active>
        <description>Member Id tied to Benefit should be 10 characters in length</description>
        <errorConditionFormula>AND(
ISNEW(),
NOT (ISBLANK( Member_Id__c )),
NOT ( LEN(Member_Id__c) = 10 ) 
)</errorConditionFormula>
        <errorMessage>&apos;Member Id&apos; should be 10 characters in Length.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields_Check_For_Benefit_Create</fullName>
        <active>false</active>
        <description>Check on the required fields for Benefits creation for Germany Benefits.</description>
        <errorConditionFormula>AND (
NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;Data Integrator&quot;), 
	RecordType.DeveloperName = &apos;DE_Benefit&apos;,
	OR (
		ISBLANK(Member_Id__c),
		ISBLANK(Payor__c),
		ISBLANK(TEXT(Benefit_Hierarchy__c))
	)
)</errorConditionFormula>
        <errorMessage>Member Id, Payor, Benefit Hierarchy information are required to save a Benefit.</errorMessage>
    </validationRules>
</CustomObject>